# BorderPOS

./: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.js
pos_data/: catalogo_productos.csv  sample_products.csv
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/database/migrations/: 1_schema.sql
src-tauri/database/tests/: 1_setup_test.sql  2_crud_test.sql
src-tauri/src/: lib.rs  main.rs  ticket_printer.rs  types.rs  usbdriver.rs
src-tauri/src/windows_printing/: mod.rs  windows_printer.rs  windows_printers.rs
src/assets/: global.css  modal.css
src/components/: modal.jsx
src/components/ui/: button.tsx  input.tsx  react-portal.jsx
src/hooks/: useGlobalStore.js
src/lib/: utils.js
src/screens/: config-screen.jsx  db_test_screen.jsx  payment-completion-screen.jsx  payment-screen.jsx  sales-screen.jsx
src/screens/MainScreen/: MainScreen.jsx
src/screens/MainScreen/sections/: products-paged.jsx  products.jsx  sales-bar.jsx  search-bar.jsx
src/screens/PaymentScreen/: modal.jsx  payment-screen.jsx
src/screens/main-screen/: main-screen.jsx
src/screens/main-screen/sections/: products.jsx  sales-bar.jsx  search-bar.jsx
src/services/: db.js
