[package]
name = "borderpos"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "borderpos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
escpos = { version = "0.15.2", features = ["full"] }
rusb = "0.9.4" # Adjust version as needed
tfd = "0.1.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.56.0", features = ["Win32_Graphics_Printing", "Win32_Graphics_Gdi", "Win32_Security"] }
